# Alicia_duo_ros2

./: .gitignore  README.md
alicia_duo_descriptions/config/: alicia.rviz
alicia_duo_descriptions/launch/: display.launch  display.launch.py  display_xacro.launch.py
alicia_duo_descriptions/urdf/: alicia_duo.ros2_control.xacro  alicia_duo_with_gripper.urdf  alicia_duo_with_gripper.urdf.xacro  alicia_duo_with_gripper_original.urdf  alicia_gripper_original.urdf
alicia_duo_driver/: CMakeLists.txt  alicia_duo_driver.xml  alicia_hardware_interface.xml  package.xml
alicia_duo_driver/config/: alicia_duo_controllers.yaml
alicia_duo_driver/include/: alicia_duo_driver_node.hpp  alicia_hardware_interface.hpp  protocol_parser.hpp  serial_communicator.hpp
alicia_duo_driver/include/alicia_duo_driver/: alicia_duo_driver_node.hpp  alicia_hardware_interface.hpp
alicia_duo_driver/launch/: alicia_duo_driver.launch.py  alicia_moveit.launch.py  aliciad_moveit.launch.py  ros2_control_demo.launch.py  serial_driver_launch.py
alicia_duo_driver/msg/: ArmJointState.msg
alicia_duo_driver/scripts/: arm_control_node.py  serial_dispatcher_node.py
alicia_duo_driver/src/: alicia_duo_driver_node.cpp  alicia_hardware_interface.cpp  serial_communicator.cpp  serial_server_main.cpp
alicia_duo_driver/test/: test_alicia_hardware_interface.cpp
alicia_duo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
alicia_duo_moveit/config/: alicia_duo_descriptions.ros2_control.xacro  alicia_duo_descriptions.srdf  alicia_duo_descriptions.urdf.xacro  alicia_duo_descriptions_real.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
alicia_duo_moveit/launch/: alicia_duo_moveit.launch.py  demo.launch.py  demo_fake.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
alicia_duo_ros2_controller/: CMakeLists.txt  alicia_hardware_interface.xml  package.xml
alicia_duo_ros2_controller/include/: alicia_hardware_interface.hpp
alicia_duo_ros2_controller/src/: alicia_hardware_interface.cpp
alicia_duo_ros2_controller/test/: test_alicia_hardware_interface.cpp
aliciad_moveit/: .setup_assistant  CMakeLists.txt  package.xml
aliciad_moveit/config/: alicia_duo_descriptions.ros2_control.xacro  alicia_duo_descriptions.srdf  alicia_duo_descriptions.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
aliciad_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/alicia_duo_descriptions/: CMakeLists.txt  package.xml
src/alicia_duo_descriptions/urdf/: alicia_gripper.urdf
src/alicia_duo_driver/: package.xml
src/alicia_duo_driver/include/alicia_duo_driver/: serial_server_node.hpp
src/alicia_duo_driver/scripts/: joint_state_publisher_node.py
src/alicia_duo_driver/src/: serial_server_node.cpp
